--- a/src/style.css
+++ b/src/style.css
@@ -23,17 +23,13 @@ a:hover {
   color: #535bf2;
 }
 
-body {
-  display: flex;
-  min-width: 320px;
-  min-height: 100vh;
-  margin: 0;
-  place-items: center;
-}
-
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+}
+
+body {
+  margin: 0;
 }
 
 button {
@@ -61,11 +57,12 @@ button:focus-visible {
   padding: 2em;
 }
 
+html,
+body,
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
 }
 
 @media (prefers-color-scheme: light) {
